# xdx-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  rust-mermaid.toml
.cargo/: config.toml
.github/workflows/: ci.yml  diagrams.yml  release.yml
calibration/: calibration.md  preset_dx100.md
calibration/detune_calib/: README.md
calibration/eg_bank/: README.md
calibration/kbs_calib/: README.md  kbs_calib.syx
calibration/lfo_calib/: README.md
calibration/preset_bank/: README.md  all_voices.syx
calibration/preset_bank_wo_lfo/: README.md  all_voices_wo_lfo.syx
calibration/preset_dx100_1/: dx100_1.syx
calibration/preset_dx100_2/: dx100_2.syx
calibration/preset_dx100_3/: dx100_3.syx
calibration/preset_dx100_4/: dx100_4.syx  record.json
calibration/preset_dx100_5/: dx100_5.syx
calibration/preset_dx100_6/: dx100_6.syx
calibration/preset_dx100_7/: dx100_7.syx
calibration/preset_dx100_8/: dx100_8.syx
docs/: architecture-release.md  architecture-validation.md  architecture.md  calibration.md  dx100-protocol.md  midi-design.md  overview.md  sequence-diagrams.md  status.md  synth_impl.md
docs/sysex/: dx100_format.md
testdata/: sysex_dump.txt
testdata/syx/: INIT_VOICE.syx  IvoryEbony2.syx  Vibrabelle.syx  detune_calib.syx  eg_test_bank.syx  lfo_calib.syx
tools/: rust-mermaid.py
xdx-compare/: Cargo.toml
xdx-compare/src/: analyze_kbs_calib.rs  analyze_lfo_calib.rs  main.rs  record_eg_bank.rs  record_preset_dir.rs
xdx-core/: Cargo.toml
xdx-core/src/: convert.rs  dx100.rs  dx7.rs  lib.rs  sysex.rs
xdx-core/tests/: sysex_dx100.rs  sysex_vmem.rs
xdx-e2e/: Cargo.toml
xdx-e2e/examples/: analyze_detune_calib.rs  analyze_wav.rs  check_sysex.rs  compare_attack.rs  compare_eg.rs  dump_voice.rs  gen_detune_calib.rs  gen_eg_test_bank.rs  gen_fb_test.rs  gen_kbs_calib.rs  gen_lfo_calib.rs  list_ports.rs  render_voice.rs  trace_eg.rs
xdx-e2e/tests/: e2e.rs
xdx-eg-viewer/: Cargo.toml
xdx-eg-viewer/src/: main.rs
xdx-gui/: Cargo.toml
xdx-gui/src/: audio.rs  main.rs
xdx-midi/: Cargo.toml
xdx-midi/src/: lib.rs
xdx-synth/: Cargo.toml
xdx-synth/examples/: render_wav.rs
xdx-synth/src/: lib.rs
